Now hiding the non-weathering substance using css on the adios spill form, resolves issue #401

--- a/css/less/skin.less
+++ b/css/less/skin.less
@@ -1939,7 +1939,7 @@ nav.navbar{
         &.error {
             .logs{
                 :not(.error) {
-                        display: none;
+                    display: none;
                 }
             }
         }
@@ -2483,6 +2483,9 @@ nav.navbar{
     &.continuespill-form, &.instantspill-form {
         &.adios{
             .mapspill{
+                display: none;
+            }
+            .null-substance {
                 display: none;
             }
         }
